@@ -52,9 +52,7 @@ import org.apache.tinkerpop.gremlin.process.traversal.step.map.FlatMapTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.FoldTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.GraphTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.LoopsTest;
-import org.apache.tinkerpop.gremlin.process.traversal.step.map.MapKeysTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.MapTest;
-import org.apache.tinkerpop.gremlin.process.traversal.step.map.MapValuesTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.MatchTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.MaxTest;
 import org.apache.tinkerpop.gremlin.process.traversal.step.map.MeanTest;
@@ -142,8 +140,6 @@ public class ProcessStandardSuite extends AbstractGremlinSuite {
             GraphTest.Traversals.class,
             LoopsTest.Traversals.class,
             MapTest.Traversals.class,
-            MapKeysTest.Traversals.class,
-            MapValuesTest.Traversals.class,
             MatchTest.CountMatchTraversals.class,
             MatchTest.GreedyMatchTraversals.class,
             MaxTest.Traversals.class,
@@ -228,8 +224,6 @@ public class ProcessStandardSuite extends AbstractGremlinSuite {
             FoldTest.class,
             LoopsTest.class,
             MapTest.class,
-            MapKeysTest.class,
-            MapValuesTest.class,
             MatchTest.class,
             MaxTest.class,
             MeanTest.class,
